--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
 <!DOCTYPE html>
+<html>
+  <head>
+    <style>
+      @import url("https://fonts.googleapis.com/css?family=Roboto+Slab");
+      body {
+        font-family: "Roboto Slab";
+      }
+    </style>
+  </head>
+  <body>
+    
+  </body>
+</html>
