--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     </style>
   </head>
   <body>
-    
+    <a href="7 Minutes Dead EP.jpg" target="_blank">7 Minutes Dead EP</a>
   </body>
 </html>
